<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:floatlabel="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal" >

    <TextView
        android:id="@+id/welcomeSubTitle"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/passphrase_edit_field"
        android:layout_alignRight="@id/passphrase_edit_field"
        android:layout_marginTop="20dp"
        android:text="@string/label_enter_your_password"
        android:contentDescription="@string/label_enter_your_password"
        android:textSize="18sp" />

    <com.iangclifton.android.floatlabel.FloatLabel
        android:id="@+id/passphrase_edit_field"
        android:layout_below="@id/welcomeSubTitle"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/passphrase" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_below="@id/passphrase_edit_field"
        android:layout_alignLeft="@id/passphrase_edit_field"
        android:layout_alignRight="@id/passphrase_edit_field"
        android:layout_marginTop="20dp"
        android:onClick="login"
        android:text="@string/title_login"
        android:contentDescription="@string/title_login"/>

</RelativeLayout>